--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Stylish Portfolio Template for Bootstrap</title>
+    <title>Virtual Academy; Experience Learning!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -23,7 +23,7 @@
     <div id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-        <li class="sidebar-brand"><a href="http://startbootstrap.com">Start Bootstrap</a></li>
+        <li class="sidebar-brand"><a href="#">Navigate</a></li>
         <li><a href="#top">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
@@ -99,7 +99,7 @@
     <!-- Callout -->
     <div class="callout">
       <div class="vert-text">
-        <h1>A Dramatic Text Area</h1>
+        <h1>Experience Learning Like Never Before!</h1>
       </div>
     </div>
     <!-- /Callout -->
@@ -150,9 +150,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
-            <h3>The buttons below are impossible to resist.</h3>
-            <a href="#" class="btn btn-lg btn-default">Click Me!</a>
-            <a href="#" class="btn btn-lg btn-primary">Look at Me!</a>
+            <h3>Get to Know Us More!</h3>
+            <a href="#" class="btn btn-lg btn-default">Contact Us</a>
+            <a href="#" class="btn btn-lg btn-primary">Learn More About Us</a>
           </div>
         </div>
       </div>
@@ -165,7 +165,6 @@
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
             <ul class="list-inline">
-              <li><i class="fa fa-facebook fa-3x"></i></li>
               <li><i class="fa fa-twitter fa-3x"></i></li>
             </ul>
             <div class="top-scroll">
