--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
             <h3>Get to Know Us More!</h3>
-            <a href="#" class="btn btn-lg btn-default">Contact Us</a>
+            <!-- <a href="#" class="btn btn-lg btn-default">Contact Us</a> -->
             <a href="#" class="btn btn-lg btn-primary">Learn More About Us</a>
           </div>
         </div>
